@@ -1,3 +1,6 @@
+[B]2.1.0[/B]
+- Fixes after thetvdb API changes
+
 [B]2.0.19[/B]
 - Fix crash for empty artwork
 
